# choose-adventure-backend

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
core/: config.py  models.py  prompts.py  story_generator.py
db/: database.py
models/: job.py  story.py
routers/: job.py  story.py
schemas/: job.py  story.py
